# qaguru-17

./: pyproject.toml
api_utils/: constants.py  session.py
models/schemas/authorization/: __init__.py  post_login.py  post_register.py
models/schemas/resources/: __init__.py  get_resource.py  get_resources.py  patch_resource.py  post_resource.py  put_resource.py
tests/: conftest.py  test_methods.py  test_resource_get_endpoint.py  test_schemas.py  test_status_codes.py
tests/test_reqres/: test_authorization.py  test_resource.py
